--- a/MA_Week_3_Seminar.ipynb
+++ b/MA_Week_3_Seminar.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "ada7675f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# LELA70331 Computational Linguistics Week 3"
    ]
@@ -13,17 +15,9 @@
    "id": "59c58486",
    "metadata": {},
    "source": [
-    "## Tokenisation and Morphology\n",
+    "## Regular Expressions\n",
     "\n",
     "In this week's session we are going to look first at a tool that is crucial in implementing the preprocessing tasks introduced in the lecture - regular expressions.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3a659d6d",
-   "metadata": {},
-   "source": [
-    "### Regular Expressions"
    ]
   },
   {
