--- a/MA_Week_3_Seminar.ipynb
+++ b/MA_Week_3_Seminar.ipynb
@@ -43,7 +43,7 @@
    "id": "add0aad8",
    "metadata": {},
    "source": [
-    "In order to explore this we will import text again and tokenise it in the same way we did last week. However, instead of downloading the file and uploading it again we are going to use a tool call wget to retrieve the online file directly from Colab"
+    "In order to explore this we will import text again and tokenise it in the same way we did last week. However, instead of downloading the file and uploading it again we are going to use a tool called wget to retrieve the online file directly from Colab"
    ]
   },
   {
@@ -248,18 +248,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e618e8f8-dbab-470c-8451-2631f3a0b28b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['lodged', 'walked', 'avoided', 'five-storied', 'provided', 'lived', 'obliged', 'passed', 'frightened', 'ashamed', 'overstrained', 'absorbed', 'isolated', 'dreaded', 'crushed', 'ceased', 'stopped', 'forced', 'frightened', 'learned', 'worked', 'completed', 'gleamed', 'refined', 'walked', 'confessed', 'tasted', 'dressed', 'accustomed', 'ashamed', 'have\\ncreated', 'crowded', 'caused', 'accumulated', 'minded', 'indeed', 'disliked', 'dragged', 'shouted', 'stopped', 'clutched', 'bespattered', 'muttered', 'noticed', 'remembered', 'indeed', 'hundred', 'counted', 'jeered', 'attempted', 'looked', 'inhabited', 'employed', 'slipped', 'unnoticed', 'liked', 'dreaded', 'scared', 'he\\nreached', 'barred', 'engaged', 'occupied', 'untenanted', 'seemed', 'started', 'overstrained', 'opened', 'eyed', 'and\\nopened', 'stepped', 'partitioned', 'diminutive,\\nwithered', 'grizzled', 'smeared', 'looked', 'knotted', 'coughed', 'groaned', 'looked', 'continued', 'disconcerted', 'surprised', 'paused', 'stepped', 'walked', 'brightly\\nlighted', 'flashed', 'scanned', 'consisted', 'fixed', 'polished', 'bed', 'looked', 'old-fashioned', 'engraved', 'pled', 'pled', 'red', 'cried', 'handed', 'checked', 'fumbled', 'disappeared', 'listened', 'reflected', 'looked', 'wanted', 'asked', 'asked', 'stopped', 'cried', 'added', 'reached', 'wretched', 'walked', 'noticed', 'entered', 'mounted', 'tormented', 'longed', 'attributed', 'ordered', 'gazed', 'appeared', 'full-skirted', 'had\\ndropped', 'hummed', 'loved', 'loved', 'crowded', 'used', 'shared', 'looked', 'looked', 'retired', 'appeared']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(re.findall(\"[^ ]+ed\", chapter_one))"
    ]
@@ -472,15 +464,7 @@
     "id": "8Zj1DoDsYQQV"
    },
    "source": [
-    "In this week's lecture you heard about Vector-based semantics. Today we will take a look at these models in Python. First we will build a co-occurence model from the now very familiar Crime and Punishment. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de36ce0b-40cb-4670-ae95-95056251eacc",
-   "metadata": {},
-   "source": [
-    "First we will segment and tokenize the whole novel."
+    "In this week's lecture you heard about Vector-based semantics. Today we will take a look at these models in Python. First we will build a co-occurence model from the now very familiar Crime and Punishment. We will start by segmenting and tokenizing the whole novel."
    ]
   },
   {
@@ -1120,7 +1104,7 @@
    },
    "outputs": [],
    "source": [
-    "embeddings.get_closest_to_vector(vec, n=4)"
+    "embeddings.get_closest_to_vector(vec, n=10)"
    ]
   },
   {
@@ -1269,7 +1253,7 @@
    },
    "outputs": [],
    "source": [
-    "embeddings.get_closest_to_vector(vec, n=4)"
+    "embeddings.get_closest_to_vector(vec, n=10)"
    ]
   },
   {
