--- a/Week_4_Seminar.ipynb
+++ b/Week_4_Seminar.ipynb
@@ -249,7 +249,7 @@
         "id": "QoNTVeOS_up0"
       },
       "source": [
-        "As well as being a way to organize functions this can be a way to store variables and group different attributes"
+        "As well as being a way to organize functions this can be a way to store and group variables"
       ]
     },
     {
@@ -816,7 +816,7 @@
       "source": [
         "### Interpretability\n",
         "\n",
-        "The simplicity of the Perceptron (it only has 1 layer) means that it is straightforward to interpret by looking at model weights. When models have more layers this becomes much more difficult!"
+        "The simplicity of the Perceptron (it only has 1 layer) means that it is straightforward to interpret by looking at model weights. When models have more layers (or even once we start using representations other than one hot encoding) this becomes much more difficult!"
       ]
     },
     {
