--- a/Week_5_Seminar.ipynb
+++ b/Week_5_Seminar.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "name": "Week_5_Seminar.ipynb",
+      "name": "Copy of Week_5_Seminar.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -77,7 +77,7 @@
         "id": "x1U85sASKSul"
       },
       "source": [
-        "!wget https://www.dropbox.com/s/whwv363h5lddty5/CL_Week_5_Materials.zip\n",
+        "!wget https://www.dropbox.com/s/9dwmaiplltnnllp/CL_Week_5_Materials.zip?dl=0\n",
         "!unzip -q CL_Week_5_Materials.zip\n",
         "!cp -r CL_Week_5_Materials /content/gdrive/My\\ Drive/"
       ],
