--- a/Week_5_Seminar.ipynb
+++ b/Week_5_Seminar.ipynb
@@ -77,7 +77,7 @@
         "id": "x1U85sASKSul"
       },
       "source": [
-        "!wget https://www.dropbox.com/s/9dwmaiplltnnllp/CL_Week_5_Materials.zip?dl=0\n",
+        "!wget https://www.dropbox.com/s/9dwmaiplltnnllp/CL_Week_5_Materials.zip\n",
         "!unzip -q CL_Week_5_Materials.zip\n",
         "!cp -r CL_Week_5_Materials /content/gdrive/My\\ Drive/"
       ],
@@ -364,7 +364,7 @@
         "# surname = input(\"Enter a surname: \")\n",
         "classifier = classifier.to(\"cpu\")\n",
         "for surname in ['McMahan', 'Nakamoto', 'Wan', 'Cho']:\n",
-        "    print(predict_nationality_rnn(surname, classifier, vectorizer))"
+        "    print(predict_nationality(surname, classifier, vectorizer))"
       ],
       "execution_count": null,
       "outputs": []
@@ -587,7 +587,7 @@
         "# surname = input(\"Enter a surname: \")\n",
         "classifier = classifier.to(\"cpu\")\n",
         "for surname in ['McMahan', 'Nakamoto', 'Wan', 'Cho']:\n",
-        "    print(predict_nationality_rnn(surname, classifier, vectorizer))"
+        "    print(predict_nationality(surname, classifier, vectorizer))"
       ],
       "execution_count": null,
       "outputs": []
@@ -1931,11 +1931,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Zk5H16DgNth8",
-        "outputId": "2972a351-80d7-410a-b562-5c1682290730"
+        "id": "Zk5H16DgNth8"
       },
       "source": [
         "for k in output:\n",
@@ -1947,25 +1943,7 @@
         "    print('')"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "prompt: the dog wanted more\n",
-            "\n",
-            "================================== Output ==================================\n",
-            "the dog wanted more than the other dog to take him, and if they could have the other dog, it would have happened a while ago,\" Mr. Bowers says. \"That's a very, very, very, very sad story.\"\n",
-            "\n",
-            "The story goes like this. In December 2008, a dog from the city rescued from a nearby park died in the backyard, a day after its owner had left it with a neighbor. The neighbor's dog also died in the yard.\n",
-            "\n",
-            "A neighbor of the other dog, named\n",
-            "\n",
-            "********************************************************************************************************************\n",
-            "\n"
-          ]
-        }
-      ]
+      "outputs": []
     }
   ]
 }
