--- a/Postgrad_Week_5_Seminar.ipynb
+++ b/Postgrad_Week_5_Seminar.ipynb
@@ -36,7 +36,7 @@
    },
    "outputs": [],
    "source": [
-    "!wget https://www.dropbox.com/s/4u35bn58ryrnpy8/CL_Week_4_Materials.zip"
+    "!wget https://www.dropbox.com/s/461pk5awjiw6nfk/CL_Postgrad_Week_5_Materials.zip"
    ]
   },
   {
@@ -47,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "!unzip -q CL_Week_4_Materials.zip"
+    "!unzip -q CL_Postgrad_Week_5_Materials.zip"
    ]
   },
   {
@@ -58,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "!cp -r CL_Week_4_Materials /content/gdrive/My\\ Drive/"
+    "!cp -r CL_Postgrad_Week_5_Materials /content/gdrive/My\\ Drive/"
    ]
   },
   {
@@ -87,8 +87,8 @@
    },
    "outputs": [],
    "source": [
-    "!cp /content/gdrive/My\\ Drive/CL_Week_4_Materials/nn_tools.py .\n",
-    "!cp /content/gdrive/My\\ Drive/CL_Week_4_Materials/nn_tools2.py ."
+    "!cp /content/gdrive/My\\ Drive/CL_Postgrad_Week_5_Materials/nn_tools.py .\n",
+    "!cp /content/gdrive/My\\ Drive/CL_Postgrad_Week_5_Materials/nn_tools2.py ."
    ]
   },
   {
@@ -490,10 +490,10 @@
     "    # Data and Path information\n",
     "    frequency_cutoff=25,\n",
     "    model_state_file='model.pth',\n",
-    "    review_csv='/content/gdrive/My Drive/CL_Week_4_Materials/reviews_with_splits_lite.csv',\n",
+    "    review_csv='/content/gdrive/My Drive/CL_Postgrad_Week_5_Materials/reviews_with_splits_lite.csv',\n",
     "    # review_csv='data/yelp/reviews_with_splits_full.csv',\n",
     "    # save_dir='/content/gdrive/My Drive/Teaching/Computational_Linguistics/PyTorchNLPBook-master/chapters/chapter_3/model_storage/ch3/yelp/',\n",
-    "    save_dir='/content/gdrive/My Drive/CL_Week_4_Materials/',\n",
+    "    save_dir='/content/gdrive/My Drive/CL_Postgrad_Week_5_Materials/',\n",
     "    vectorizer_file='vectorizer.json',\n",
     "    # No Model hyper parameters\n",
     "    # Training hyper parameters\n",
