--- a/LELA32051_Coursework.ipynb
+++ b/LELA32051_Coursework.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "A guide as to what should go in your report can be found [here]( https://www.dropbox.com/s/zlmbk60a4ei1jdh/Writing%20your%20Computational%20Linguistics%20Research%20Report.docx)\n",
     "\n",
-    "You will be required to submit this notebook with all your changes and additions as well as your report."
+    "Your report should be submitted via turnitin using the link on Blackboard. Once you have completed your work in this notebook please download a copy including all of your changes and additions (select File -> Download -> Download .ipynb) and email it to me at colin.bannard@manchester.ac.uk. This is just so that I can check what you have done if it isn't clear from your report. You will not be marked on the quality of any code you might include."
    ]
   },
   {
