--- a/LELA32051_Coursework.ipynb
+++ b/LELA32051_Coursework.ipynb
@@ -30,7 +30,9 @@
     "\n",
     "A guide as to what should go in your report can be found [here]( https://www.dropbox.com/s/zlmbk60a4ei1jdh/Writing%20your%20Computational%20Linguistics%20Research%20Report.docx)\n",
     "\n",
-    "Your report should be submitted via turnitin using the link on Blackboard. Once you have completed your work in this notebook please download a copy including all of your changes and additions (select File -> Download -> Download .ipynb) and email it to me at colin.bannard@manchester.ac.uk. This is just so that I can check what you have done if it isn't clear from your report. You will not be marked on the quality of any code you might include."
+    "Your report should be submitted via turnitin using the link on Blackboard. Once you have completed your work in this notebook please download a copy including all of your changes and additions (select File -> Download -> Download .ipynb) and email it to me at colin.bannard@manchester.ac.uk. This is just so that I can check what you have done if it isn't clear from your report. You will not be marked on the quality of any code you might include.\n",
+    "\n",
+    "Please feel free to ask any questions about any part of the coursework. So that my response can benefit everyone please do so using the Coursework Discussion board on Blackboard. You can find a link to this down the left of the module Blackboard page."
    ]
   },
   {
@@ -140,7 +142,7 @@
    "source": [
     "## Rule-based approach\n",
     "\n",
-    "Your task here is to create a classifier using rules, in the form of regular expressions"
+    "Your task here is to create a classifier using rules, in the form of regular expressions. I have provided you with the basic code for doing this. You will just need to edit the regular expressions in order to improve performance."
    ]
   },
   {
@@ -150,7 +152,9 @@
    },
    "source": [
     "### Loading and inspecting project data\n",
-    "A valuable first step in order to understand the task is to inspect the data in order to understand the different intents being detected\n"
+    "A valuable first step in order to understand the task is to inspect the data in order to understand the different intents being detected.\n",
+    "\n",
+    "First you need to load the data:\n"
    ]
   },
   {
@@ -162,6 +166,13 @@
    "outputs": [],
    "source": [
     "intent_data=pd.read_csv('/content/gdrive/My Drive/Intent_Classification/intent_classification_with_splits.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can then examine example utterances for each of the intent types as follows."
    ]
   },
   {
@@ -328,7 +339,7 @@
    "source": [
     "### Preprocessing\n",
     "\n",
-    "To increase the generalisability of your system you can preprocess it to, for example, convert morphological variants to a single \"lemma\". You can do ths by adding different substitution (re.sub) functions to the function below. The function as is stands doesn't do anything - you need to update the re.sub statements. This isn't an essential step as you can deal with variants in your patterns, but it will help to reduce redundancy in your classifier regular expressions which you may find helpful.\n"
+    "To increase the generalisability of your system you can preprocess it to, for example, convert morphological variants to a single \"lemma\". You can do this by adding different substitution (re.sub) functions to the function below. The function as is stands doesn't do anything - you need to update the re.sub statements. This isn't an essential step as you can deal with variants in your patterns, but it will help to reduce redundancy in your classifier regular expressions which you may find helpful.\n"
    ]
   },
   {
@@ -343,6 +354,23 @@
     "  utt = re.sub(\"\",\"\", utt)\n",
     "  utt = re.sub(\"\",\"\", utt)\n",
     "  return utt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can test whether you patterns are working as intented using the following code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_input = input(\"Enter a utterance to test your preprocessing on: \")\n",
+    "print(preprocess_utterance(test_input))"
    ]
   },
   {
@@ -589,7 +617,7 @@
     "id": "-d7BwY4CQIF-"
    },
    "source": [
-    "For this machine-learning-based model we are going to make the preprocessing changes to the data use, and this will involve making changes to the file we have saved.\n",
+    "For this machine-learning-based model we are going to make the preprocessing changes to the data used, and this will involve making changes to the file we have saved.\n",
     "\n",
     "Before we make changes to the data however, we should create a backup of the unaltered file in case we need to revert to it."
    ]
@@ -632,7 +660,7 @@
     "id": "Lltyd5emQIF_"
    },
    "source": [
-    "We can check that our preprocessing patterns are doing what we want by testing them on examples using the following cell"
+    "You can check that your preprocessing patterns are doing what we want by testing them on examples using the following cell"
    ]
   },
   {
@@ -699,7 +727,7 @@
    "source": [
     "### Test on individual utterance\n",
     "\n",
-    "As with the rule-based classifier you can look at the performance of the system on a single example utterance. This can be used to see whether your preprocessing is capturing the cases you hoped."
+    "As with the rule-based classifier you can look at the performance of the system on a single example utterance. This can be used to see whether your preprocessing is helping to capture the cases you hoped."
    ]
   },
   {
@@ -776,7 +804,7 @@
    "source": [
     "## Multilayer neural network classifier\n",
     "\n",
-    "The third kind of classifier that you can build is a two-layer neural network. The model is defined below. Again you don't need to change this code."
+    "The third kind of classifier that you should build is a two-layer neural network. The model is defined below. Again you don't need to change this code."
    ]
   },
   {
@@ -892,7 +920,7 @@
     "id": "5KCskx_pBPn1"
    },
    "source": [
-    "We can check that our preprocessing patterns are doing what we want by testing them on examples using the following cell"
+    "You can check that your preprocessing patterns are doing what we want by testing them on examples using the following cell"
    ]
   },
   {
@@ -1048,6 +1076,32 @@
     "print(\"Test Accuracy: {:.2f}\".format(train_state['test_acc']))\n",
     "print(pd.DataFrame(confusion_matrix(predicted, true), index=[\"AddToPlaylist\", \"BookRestaurant\", \"GetWeather\", \"PlayMusic\", \"RateBook\", \"SearchCreativeWork\", \"SearchScreeningEvent\"]))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## That's it!\n",
+    "\n",
+    "Once you have run through all of this notebook, made all of the additions and changes you want, and run all of the experiments you want you should write up the results following the guidance [here]( https://www.dropbox.com/s/zlmbk60a4ei1jdh/Writing%20your%20Computational%20Linguistics%20Research%20Report.docx)\n",
+    "\n",
+    "Your report should be submitted via turnitin using the link on Blackboard. \n",
+    "\n",
+    "To repeat a couple of things from the top of the sheet: \n",
+    "\n",
+    "- Once you have completed your work in this notebook please download a copy including all of your changes and additions (select File -> Download -> Download .ipynb) and email it to me at colin.bannard@manchester.ac.uk. This is just so that I can check what you have done if it isn't clear from your report. You will not be marked on the quality of any code you might include.\n",
+    "\n",
+    "- Please feel free to ask any questions about any part of the coursework. So that my response can benefit everyone please do so using the Coursework Discussion board on Blackboard. You can find a link to this down the left of the module Blackboard page.\n",
+    "\n",
+    "I hope you find it an enjoyable and worthwhile exercise.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
