--- a/LELA32051_Coursework.ipynb
+++ b/LELA32051_Coursework.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "This document contains instructions, guidance and code for the coursework assignment for this module. \n",
     "\n",
-    "The assignment focuses on the task of intent classification. You heard about this in the lecture on dialogue systems - given a particular piece of input from the speaker, the system tries to determine what goal the speaker is trying to achieve, in order that it can then produce an appropriate response. \n",
+    "The assignment focuses on the task of intent classification. You heard about this in the lecture on dialogue systems, and read about it in this week's reading. It is an important step in modern task-based dialogue systems - given a particular piece of input from the speaker, the system tries to determine what goal the speaker is trying to achieve, in order that it can then produce an appropriate response. \n",
     "\n",
     "Your task is to build a system that takes a transcribed user utterance as input and outputs one of seven different intents:\n",
     "\n",
