--- a/LELA32051_Coursework.ipynb
+++ b/LELA32051_Coursework.ipynb
@@ -466,7 +466,7 @@
    },
    "outputs": [],
    "source": [
-    "predicted = [assign_intent(item) for item in intent_data[intent_data['split'] == \"val\"]['text']]\n",
+    "predicted = [assign_intent(preprocess_utterance(item)) for item in intent_data[intent_data['split'] == \"val\"]['text']]\n",
     "true = intent_data[intent_data['split'] == \"val\"]['intent']\n",
     "accuracy = (predicted == true).sum()/len(true)\n",
     "print(accuracy)"
@@ -511,7 +511,7 @@
    },
    "outputs": [],
    "source": [
-    "predicted = [assign_intent(item) for item in intent_data[intent_data['split'] == \"test\"]['text']]\n",
+    "predicted = [assign_intent(preprocess_utterance(item)) for item in intent_data[intent_data['split'] == \"test\"]['text']]\n",
     "true = intent_data[intent_data['split'] == \"test\"]['intent']\n",
     "accuracy = (predicted == true).sum()/len(true)\n",
     "print(accuracy)"
@@ -741,7 +741,7 @@
     "torch.manual_seed(0)\n",
     "new_utterance = input(\"Enter a utterance to classify: \")\n",
     "classifier = classifier.to(\"cpu\")\n",
-    "prediction = predict_intent(new_utterance, classifier, params.vectorizer)\n",
+    "prediction = predict_intent(preprocess_utterance(new_utterance), classifier, params.vectorizer)\n",
     "print(\"{} -> {} (p={:0.2f})\".format(new_utterance,\n",
     "                                    prediction['intent'],\n",
     "                                    prediction['probability']))"
@@ -963,7 +963,7 @@
    },
    "source": [
     "### Training model\n",
-    "You can now move on to training the model using your preprocessing data.\n",
+    "You can now move on to training the model using your preprocessed data.\n",
     "\n",
     "One important variable that you can change is the number of nodes to include in your hidden layer. You can set this parameter in the cell below. The default is 100."
    ]
@@ -1021,7 +1021,7 @@
     "torch.manual_seed(0)\n",
     "new_utterance = input(\"Enter a utterance to classify: \")\n",
     "classifier = classifier.to(\"cpu\")\n",
-    "prediction = predict_intent(new_utterance, classifier, params.vectorizer)\n",
+    "prediction = predict_intent(preprocess_utterance(new_utterance), classifier, params.vectorizer)\n",
     "print(\"{} -> {} (p={:0.2f})\".format(new_utterance,\n",
     "                                    prediction['intent'],\n",
     "                                    prediction['probability']))"
