--- a/Week_7_Seminar.ipynb
+++ b/Week_7_Seminar.ipynb
@@ -58,8 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input = 'walked'\n",
-    "re.sub('ed','ing',input)"
+    "utt = 'walked'\n",
+    "re.sub('ed','ing',utt)"
    ]
   },
   {
@@ -81,8 +81,8 @@
    },
    "outputs": [],
    "source": [
-    "input = \"procrastinating\"\n",
-    "re.sub('([a-z]+)ing','\\\\1ed',input)"
+    "utt = \"procrastinating\"\n",
+    "re.sub('([a-z]+)ing','\\\\1ed',utt)"
    ]
   },
   {
@@ -142,18 +142,18 @@
     "\n",
     "Add patterns (using substitutions and grouping) to the respond function that will allow Eliza to conduct both of these conversations. Test your system by conducting the conversation with Eliza.\n",
     "\n",
-    "User: Hello, my name is Emma <br>\n",
-    "Eliza: Hello Emma, my name is Eliza. How are you feeling today? <br>\n",
-    "User: I'm feeling very happy. <br>\n",
+    "User: hello my name is emma <br>\n",
+    "Eliza: Hello emma my name is Eliza. How are you feeling today? <br>\n",
+    "User: i am feeling very happy <br>\n",
     "Eliza: Do you often feel happy? <br>\n",
-    "User: Yes. Since I started my new job. <br>\n",
+    "User: yes since I started my new job <br>\n",
     "Eliza: Can you tell me about starting your new job? <br>\n",
     "\n",
-    "User: Hello, my name is John. <br>\n",
-    "Eliza: Hello John, my name is Eliza. How are you feeling today? <br>\n",
-    "User: I'm feeling pretty happy <br>\n",
+    "User: hello my name is john <br>\n",
+    "Eliza: Hello john, my name is Eliza. How are you feeling today? <br>\n",
+    "User: i am feeling pretty happy <br>\n",
     "Eliza: Do you often feel happy? <br>\n",
-    "User: Yes. Since I moved house. <br>\n",
+    "User: yes since I moved house <br>\n",
     "Eliza: Can you tell me about moving house? <br>"
    ]
   },
@@ -161,11 +161,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reverse engineering the NLTK Eliza\n",
+    "### Reverse engineering the NLTK Eliza (additional activity to do in your own time)\n",
     "\n",
-    "There have been many implementations of Eliza over the years. One version is built into the NLTK toolkit. We are going to take a look at this.\n",
-    "\n",
-    "Conduct a four-turn-each conversation of your own with the NLTK Eliza. Adds the substitution that you think Eliza is using to generate the responses to your own chatbot using the code below. Where you find Eliza's response to be lacking, update the substitution to give a better response."
+    "There have been many implementations of Eliza over the years. One version is built into the NLTK toolkit. This can be run as follows:\n"
    ]
   },
   {
@@ -193,6 +191,13 @@
    "outputs": [],
    "source": [
     "nltk.chat.eliza.demo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Activity to try in your own time: Conduct a four-turn-each conversation of your own with the NLTK Eliza. Adds the substitution that you think Eliza is using to generate the responses to your own chatbot using the code below. Where you find Eliza's response to be lacking, update the substitution to give a better response."
    ]
   },
   {
@@ -246,7 +251,7 @@
     "id": "yIUnZjlxsUj1"
    },
    "source": [
-    "Training and running a corpus-based chatbot takes more steps than we have time for today. If you want to have a go, then you will find a tutorial for doing so in Pytorch here:\n",
+    "Training and running a corpus-based chatbot takes more steps than we have time for today. If you want to have a go in your own time, then you will find a tutorial for doing so in Pytorch here:\n",
     "\n",
     "https://pytorch.org/tutorials/beginner/chatbot_tutorial.html\n",
     "\n",
