--- a/LELA70331_Coursework.ipynb
+++ b/LELA70331_Coursework.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "This notebook contains code that you can use in the development of your system. Once you have created and evaluated your system, you are going to write a report of no more than 1500 words that describes and evaluates the task, the system and the experiments.\n",
     "\n",
-    "A guide as to what should go in your report can be found [here]( )\n",
+    "A guide as to what should go in your report can be found [here](https://www.dropbox.com/s/7u1yazkok6hmeth/Writing%20your%20Computational%20Linguistics%20Research%20Report%20-%20postgrad.docx?dl=0)\n",
     "\n",
     "Your report should be submitted via turnitin using the link on Blackboard. Once you have completed your work in this notebook please download a copy including all of your changes and additions (select File -> Download -> Download .ipynb) and email it to me at colin.bannard@manchester.ac.uk. This is just so that I can check what you have done if it isn't clear from your report. You will not be marked on the quality of any code you might include.\n",
     "\n",
