--- a/LELA70331_Coursework.ipynb
+++ b/LELA70331_Coursework.ipynb
@@ -797,7 +797,7 @@
    "source": [
     "## That's it!\n",
     "\n",
-    "Once you have run through all of this notebook, made all of the additions and changes you want, and run all of the experiments you want you should write up the results following the guidance [here]( https://www.dropbox.com/s/zlmbk60a4ei1jdh/Writing%20your%20Computational%20Linguistics%20Research%20Report.docx)\n",
+    "Once you have run through all of this notebook, made all of the additions and changes you want, and run all of the experiments you want you should write up the results following the guidance [here]( https://www.dropbox.com/s/7u1yazkok6hmeth/Writing%20your%20Computational%20Linguistics%20Research%20Report%20-%20postgrad.docx?dl=0)\n",
     "\n",
     "Your report should be submitted via turnitin using the link on Blackboard. \n",
     "\n",
