--- a/Postgrad_Week_7_Seminar.ipynb
+++ b/Postgrad_Week_7_Seminar.ipynb
@@ -2,18 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4b4ff28c",
+   "id": "ebe13fad",
    "metadata": {},
    "source": [
     "# LELA32051 Computational Linguistics Week 7\n",
     "\n",
-    "This week we are going to take a look at an important component of modern task-based dialogue systems - intent classification. This is also the topic of your coursework assignment. The notebook we are going to use is here:\n",
+    "This week we are going to take a look at an important component of modern task-based dialogue systems - intent classification. This is also the topic of your coursework assignment. The notebook we are going to use is [here](https://githubtocolab.com/cbannard/compling/blob/main/LELA70331_Coursework.ipynb)\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89c415e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
