--- a/Postgrad_Week_7_Seminar.ipynb
+++ b/Postgrad_Week_7_Seminar.ipynb
@@ -16,9 +16,28 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5b0a5917",
+   "metadata": {},
+   "source": [
+    "In working through the notebook I will ask you build a classifier that can correctly classify the intents of all the following utterances:\n",
+    "\n",
+    "\n",
+    "\n",
+    "PlayMusic: <br> play the weather girls                                              <br><br>\n",
+    "AddToPlaylist:<br> add this to my italian film soundtrack playlist                     <br><br> \n",
+    "RateBook:<br> give the restaurant guidebook 5 stars                               <br><br>\n",
+    "SearchScreeningEvent:<br> find screenings of the book thief at around 7                        <br><br> \n",
+    "BookRestaurant:<br> book me a table outside for 2 for dinner at the national theatre restaurant <br><br>\n",
+    "GetWeather:<br> will it be warm enough to eat dinner outside at around 7 tonight <br><br>\n",
+    "SearchCreativeWork:<br> find me songs films or books about restaurants                     <br><br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c686dc2",
+   "id": "b365bd5f",
    "metadata": {},
    "outputs": [],
    "source": []
